ticket purchase page s/2018/2020/g

--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -11,7 +11,7 @@
 	
 	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
-					<h3>Bestel je tickets voor Fri3d Camp 2018!</h3>
+					<h3>Bestel je tickets voor Fri3d Camp 2020!</h3>
 			<div class="panel">
 			{% if not 'tickets' in selling_inhibited %}
 				{% if tickets_available > 10 %}
@@ -88,7 +88,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6">
 				<ul>
-					<li>Toegang tot Fri3d Camp 2018 van vrijdag 17 augustus tot en met maandag 20 augustus. Elk ticket bevat twee warme maaltijden.</li>
+					<li>Toegang tot Fri3d Camp 2020 van vrijdag 14 augustus tot en met zondag 16 augustus. Elk ticket bevat twee warme maaltijden.</li>
 					<li>Minstens één volunteer-shift (enkele uren drank tappen, infobalie bemannen, etc.) voor wie 16 jaar of ouder is bij de start van het kamp.</li>
 					<li>Wil je geen volunteer-shift meedraaien, vink dan de optie <em>premium</em> aan. Je ticket wordt dan wel duurder.</li>
 					<li>Selecteer het aantal tickets om de per-ticket opties te zien.</li>
