swap transportation question for a camper spot product, ask if they want a hotel room

--- a/fr1ckets/src/fr1ckets/templates/purchase_view.html
+++ b/fr1ckets/src/fr1ckets/templates/purchase_view.html
@@ -19,6 +19,7 @@
 {% else %}
 				<tr><td>billable</td><td>no</td></tr>
 {% endif %}
+				<tr><td>special accomodation needs</td><td>{{ purchase.special_accomodation_needs }}</td></tr>
 			</tbody>
 		</table>
 	</div>
