serve the js libs ourselves, people report problems

--- a/fr1ckets/src/fr1ckets/templates/footer.html
+++ b/fr1ckets/src/fr1ckets/templates/footer.html
@@ -1,11 +1,11 @@
 <!-- vim: set sw=2 ts=2: -->
 		</div><!-- container-->
 		<!-- eff your french article meme -->
-		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script src="/static/js/moment.js"></script>
+		<script src="/static/js/ext/jquery-2.1.1.min.js"></script>
+		<script src="/static/js/ext/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<script src="/static/js/ext/moment.js"></script>
 		{% if page_opts and page_opts['charting'] %}
-		<script src="/static/js/Chart.js"></script>
+		<script src="/static/js/ext/Chart.js"></script>
 		{% endif %}
 		{% if page_opts and page_opts['internal'] %}
 		<script src="/static/js/fr1ckets_internal.js"></script>
