fix some copy, sizing charts, strip references to transportation field

--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -111,7 +111,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van robot accessoire A stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas is de verkoop van de Time Blaster stopgezet, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -119,16 +119,16 @@
 		<div class="row" {% if 'badge_accessory_a' in selling_inhibited %} hidden {% endif %}>
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="thumbnail">
-					<img src="/static/img/bade_accessory_a.jpg" class="img-rounded">
+					<img src="/static/img/badge_accessory_a.jpg" class="img-rounded">
 					<div class="caption text-center">
-						<h3>Robot accessoire A - <strong>€13.37</strong></h3>
-						<p>Met deze onderdelen maak je van je <a href="http://www.fri3d.be/badge/" target="_blank">Fri3d Camp badge</a> een contraptie die nog verdere toelichting kan gebruiken.</p>
+						<h3>Time Blaster - <strong>€20</strong></h3>
+						<p>Altijd al jouw eigen lasertag willen maken? Het kan nu op fri3d camp! Als uitbreiding op de badge, maar ook als standalone, heeft het badge team een blaster ontwikkeld als soldeerkit. Deze volledige Arduino compatibele kit is voorzien van de nodige toeters en bellen. Om het makkelijk te houden heb je geen enkele soldeer ervaring nodig om het werkend te krijgen. Alles is opgebouwd uit makkelijk te solderen componenten. Voor de durvers zijn er uitbreidingen met RGB LEDs en een USB interface voorzien in de kit waar toch enige vorm van geduld en een vast hand vereist zijn.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="form-group">
-					<label for="tshirt_kid_s" class="col-xs-4 col-sm-4 control-label">Robot accessoire A</label>
+					<label for="badge_accessory_a" class="col-xs-4 col-sm-4 control-label">Time Blaster</label>
 					<div class="col-xs-8 col-sm-6">
 						<select id="badge_accessory_a" name="badge_accessory_a" class="form-control">
 							<option value="0" selected>0</option>
@@ -154,7 +154,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van robot accessoire B stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas is de verkoop van de GameOn is stopgezet, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -162,16 +162,16 @@
 		<div class="row" {% if 'badge_accessory_b' in selling_inhibited %} hidden {% endif %}>
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="thumbnail">
-					<img src="/static/img/bade_accessory_b.jpg" class="img-rounded">
+					<img src="/static/img/badge_accessory_b.png" class="img-rounded">
 					<div class="caption text-center">
-						<h3>Robot accessoire B - <strong>€13.37</strong></h3>
-						<p>Met deze onderdelen maak je van je <a href="http://www.fri3d.be/badge/" target="_blank">Fri3d Camp badge</a> een contraptie die nog verdere toelichting kan gebruiken.</p>
+						<h3>GameOn - <strong>€10</strong></h3>
+						<p>Get your game on met deze gaming add-on voor de badge. Door zijn iconische layout met een joystick en 4 druktoesten kan je heel makkelijk games ontwikkelen en spelen op de Fri3d badge! Tevens voorzien we deze add-on van een 1W speaker met bijhorende versterker om volledig in de 8-bit sfeer geluiden te kunnen produceren. Some assembly required, maar anders zou het niet plezant zijn hé!</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="form-group">
-					<label for="tshirt_kid_s" class="col-xs-4 col-sm-4 control-label">Robot accessoire B</label>
+					<label for="badge_accessory_b" class="col-xs-4 col-sm-4 control-label">GameOn</label>
 					<div class="col-xs-8 col-sm-6">
 						<select id="badge_accessory_b" name="badge_accessory_b" class="form-control">
 							<option value="0" selected>0</option>
@@ -197,7 +197,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van plaatsen voor campers uitverkocht, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas is de verkoop van plaatsen voor campers en caravans uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -207,8 +207,8 @@
 				<div class="thumbnail">
 					<img src="/static/img/camper_spot.png" class="img-rounded">
 					<div class="caption text-center">
-						<h3>Plaats voor je camper - <strong>€25</strong></h3>
-						<p>We voorzien een plaatsje voor je camper op de daarvoor voorziene parking.</p>
+						<h3>Plaats voor je camper of caravan - <strong>€25</strong></h3>
+						<p>We voorzien een plaatsje voor je camper of caravan op de daarvoor voorziene parking op het grote event-plein. Stroom en wifi inbegrepen.</p>
 					</div>
 				</div>
 			</div>
@@ -328,14 +328,14 @@
 					<img src="/static/img/tshirt_k.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>T-shirts kinderen - <strong>€ 20</strong></h3>	
-						<p><a href="/static/img/maattabel_k.png" id="show_tshirt_sizes_k"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>					
+						<p><a href="/static/img/tshirt_k_maattabel.png" id="show_tshirt_sizes_k"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p	
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-sm-offset-3">
 				<div class="row">
 					<div class="form-group">
-						<label for="tshirt_kid_s" class="col-xs-6 col-sm-3 control-label">3-4</label>
+						<label for="tshirt_kid_xs" class="col-xs-6 col-sm-3 control-label">3-4</label>
 						<div class="col-xs-6 col-sm-3">
 							<select id="tshirt_kid_xs" name="tshirt_kid_xs" class="form-control">
 								<option value="0" selected>0</option>
@@ -428,7 +428,7 @@
 					<img src="/static/img/tshirt_f.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>T-shirts vrouwen - <strong>€ 20</strong></h3>
-						<p><a href="/static/img/maattabel_f.png" id="show_tshirt_sizes_f"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
+						<p><a href="/static/img/tshirt_f_maattabel.png" id="show_tshirt_sizes_f"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
 					</div>
 				</div>
 			</div>
@@ -528,7 +528,7 @@
 					<img src="/static/img/tshirt_m.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>T-shirts mannen - <strong>€ 20</strong></h3>
-						<p><a href="/static/img/maattabel_m.png" id="show_tshirt_sizes_m"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
+						<p><a href="/static/img/tsihrt_m_maattabel.png" id="show_tshirt_sizes_m"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
 					</div>
 				</div>
 			</div>
@@ -654,14 +654,14 @@
 					<img src="/static/img/hoodie_k.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>Hoodies kinderen - <strong>€ 40</strong></h3>	
-						<p><a href="/static/img/maattabel_k.png" id="show_hoodie_sizes_k"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>					
+						<p><a href="/static/img/hoodie_k_maattabel.png" id="show_hoodie_sizes_k"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-sm-offset-3">
 				<div class="row">
 					<div class="form-group">
-						<label for="hoodie_kid_s" class="col-xs-6 col-sm-3 control-label">3-4</label>
+						<label for="hoodie_kid_xs" class="col-xs-6 col-sm-3 control-label">3-4</label>
 						<div class="col-xs-6 col-sm-3">
 							<select id="hoodie_kid_xs" name="hoodie_kid_xs" class="form-control">
 								<option value="0" selected>0</option>
@@ -754,7 +754,7 @@
 					<img src="/static/img/hoodie_f.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>Hoodies vrouwen - <strong>€ 40</strong></h3>
-						<p><a href="/static/img/maattabel_f.png" id="show_hoodie_sizes_f"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
+						<p><a href="/static/img/hoodie_f_maattabel.png" id="show_hoodie_sizes_f"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
 					</div>
 				</div>
 			</div>
@@ -838,7 +838,7 @@
 					<img src="/static/img/hoodie_m.jpg" class="img-rounded">
 					<div class="caption text-center">
 						<h3>Hoodies mannen - <strong>€ 40</strong></h3>
-						<p><a href="/static/img/maattabel_m.png" id="show_hoodie_sizes_m"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
+						<p><a href="/static/img/hoodie_m_maattabel.png" id="show_hoodie_sizes_m"><i class="glyphicon glyphicon-new-window"></i> Maattabel</a></p>
 					</div>
 				</div>
 			</div>
