--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -25,7 +25,7 @@
 			{% if selling_inhibited|length > 0 %}
 					<p>De volgende items zijn niet meer beschikbaar: <b>{{ selling_inhibited|join(', ') }}</b>.</p>
 			{% endif %}
-					<p>Nog vragen? Check de <a href="http://fri3d.be/deelnemen/faq.html">FAQ</a>, of mail naar <a href="mailto:tickets@fri3d.be">tickets@fri3d.be</a>.</p>
+			<!-- <p>Nog vragen? Check de <a href="http://fri3d.be/deelnemen/faq.html">FAQ</a>, of mail naar <a href="mailto:tickets@fri3d.be">tickets@fri3d.be</a>.</p> -->
 			</div>
 		</div>
 	</div>
@@ -1033,7 +1033,7 @@
 			<div class="col-xs-12 col-sm-11 col-sm-offset-1">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" id="terms_excellent" name="terms_excellent" required aria-required="true" class="filled-in">Ik sta achter het motto "<a href="http://www.fri3d.be/deelnemen/gedragscode.html">Be excellent to each other</a>" en beloof me zo te gedragen.
+					<input type="checkbox" id="terms_excellent" name="terms_excellent" required aria-required="true" class="filled-in">Ik sta achter het motto "<!-- <a href="http://www.fri3d.be/deelnemen/gedragscode.html"> -->Be excellent to each other</a>" en beloof me zo te gedragen.
 					</label>
 				</div>
 			</div>
