copy change; vouchers

--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -972,7 +972,7 @@
 		<!-- BEGIN VOUCHER -->
 		<div class="row"><div class="col-xs-12">
 			<h3 class="text-center">Vouchers</h3>
-			<div class="well col-xs-12 col-sm-11 col-sm-offset-1"><p>Vouchers kunnen recht geven op korting of toelaten om voor een bepaalde datum tickets aan te kopen. Eventuele vouchers heb je normaal per mail ontvangen.</p></div>
+			<div class="well col-xs-12 col-sm-11 col-sm-offset-1"><p>Vouchers kunnen recht geven op korting. Eventuele vouchers heb je normaal per mail ontvangen.</p></div>
 		</div></div>
 		<div class="form-group">
 			<div class="col-xs-12 col-sm-11 col-sm-offset-1">
