explicit that everybody needs a ticket

--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -90,6 +90,7 @@
 				<div class="col-xs-12 col-sm-6">
 					<ul>
 						<li>Toegang tot Fri3d Camp 2020 van vrijdag 14 augustus tot en met zondag 16 augustus. Elk ticket bevat twee warme maaltijden.</li>
+						<li><strong>Elke kampganger heeft een ticket nodig.</strong></li>
 						<li>We hopen dat iedereen ouder dan 16 ter plekke even mee helpt met het kamp (enkele uren tappen, de infobalie bemannen, etc).</li>
 						<li>Wil je niet mee helpen aan het kamp, vink dan de optie <em>premium</em> aan. Je ticket wordt dan wel duurder.</li>
 						<li>Selecteer het aantal tickets om de per-ticket opties te zien.</li>
