--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -1040,7 +1040,7 @@
 			<div class="col-xs-12 col-sm-10 col-sm-offset-2">
 				<div class="checkbox">
 					<label>
-					<input type="checkbox" id="terms_excellent" name="terms_excellent" required aria-required="true" class="filled-in">Ik sta achter het motto "<a href="https://www.fri3d.be/deelnemers/excellent/"> Be excellent to each other</a>" en beloof me zo te gedragen.
+					<input type="checkbox" id="terms_excellent" name="terms_excellent" required aria-required="true" class="filled-in">Ik sta achter het motto "<a href="https://www.fri3d.be/deelnemers/excellent/" target="_blank"> Be excellent to each other</a>" en beloof me zo te gedragen.
 					</label>
 				</div>
 			</div>
