reword sold-out messages

--- a/fr1ckets/src/fr1ckets/templates/tickets.html
+++ b/fr1ckets/src/fr1ckets/templates/tickets.html
@@ -49,7 +49,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van de eigenlijke tickets stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>De tickets zijn uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -111,7 +111,7 @@
 		<div class="row spacebelow">
 			<div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van plaatsen voor campers en caravans uitverkocht, je kan nog wel andere zaken bestellen.</p>
+					<p>De plaatsen voor campers en caravans zijn uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -142,7 +142,7 @@
 		<div class="row spacebelow">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van de Time Blaster stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas is de Time Blaster uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -185,7 +185,7 @@
 		<div class="row spacebelow">
 			<div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van de GameOn stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas is de GameOn uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -221,7 +221,7 @@
 		<div class="row spacebelow">
 			<div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van drinkbekers uitverkocht, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas zijn de drinkbekers uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -258,7 +258,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van tshirts stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas zijn de tshirts uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -600,7 +600,7 @@
 		<div class="row spacebelow">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van hoodies stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas zijn de hoodies uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
@@ -927,7 +927,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-10 col-sm-offset-2 text-center">
 				<div class="well">
-					<p>Helaas is de verkoop van tokens stopgezet, je kan nog wel andere zaken bestellen.</p>
+					<p>Helaas zijn de tokens uitverkocht, je kan nog wel andere zaken bestellen.</p>
 				</div>
 			</div>
 		</div>
